# Stress-Monitoring-Device

./: LICENSE  README.md
3D modeling Files/: Finger_Type_CASE.SLDPRT  README.md  Raspberry_Pi_TOP CASE.SLDPRT  TOP CASE new.SLDPRT  Watch_Type_CASE.SLDPRT
3D modeling Files/Raspberry pi case/: RTEP PCB CASE.SLDPRT  RTEP PCB CASE.x_t  pcb case new.SLDPRT
Case/Raspberry pi case/: TOP CASE.SLDPRT
Code/: 1.0.cpp  Buzzer.h  HELP.txt  VEML6030.cpp  VEML6030.h  incidentRecording.h  retrieveData.cpp  retrieveData.h  white.txt  wiringPi.cpp
Code/Final code/: CMakeCache.txt  Makefile  StressC.out  StressController.cpp  VEML6030rpi.cpp  VEML6030rpi.h  (+3 more)
Code/VEML6030rpiV1/: CMakeCache.txt  CMakeLists.txt  Makefile  VEML6030rpi.cpp  VEML6030rpi.h  VEMLtest.out  cmake_install.cmake  demoVEML6030rpi.cpp  libiir.so.1  libiir.so.1.7.3  white.txt
Code/VEML6030rpiV1/iir/: Biquad.h  Cascade.cpp  RBJ.h
Extra Info/: ~$mplate for Device Development.docx  ~$w to connect Raspberry PI with system.docx
Files/: CDC_UP_Product_Design_Template.docx  How to connect Raspberry PI with system.docx
Filter Code/: ECG.docx  ECG_matchedfilter.py  ecg_filter_50_DC.py  hr_detect.py  momentaryHB.py
Hello/: This is a trial.txt
PCB/: PCB_1.sch  PCB_2.1.brd  PCB_2.sch
PCB - EAGLE Files/: README.md
Raspberry Pi Code/: Coefficients Information.txt
Raspberry Pi Code/Final code/: CMakeCache.txt  CMakeLists.txt  StressC.out  StressController.cpp  VEML6030rpi.h  cmake_install.cmake
User Manual & Support Documents/: Demo.prproj  Demovideo.prproj
Webpage/: README.md  Text Files Information.txt
(+300 files in other folders)
